Fixed bad min-width: 1200px media query to avoid overflow

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -8672,3 +8672,8 @@ Media queries
     height: 51px;
   }
 }
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
