--- a/public_html/less/media-queries.less
+++ b/public_html/less/media-queries.less
@@ -674,3 +674,9 @@ Media queries
         height: 51px;
     }
 }
+
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px;
+    }
+}
